# repo-arkeolog

./: .gitignore  AI_USAGE.md  ARCHITECTURE.md  CONTRIBUTING.md  DEPLOY_RAILWAY.md  README.md  ROADMAP.md  dev.cmd  developer.md  package-lock.json  package.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.md  config.yml  feature.md
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  pyproject.toml  start-web.sh  start-worker.sh
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py
backend/app/: config.py  db.py  main.py  models.py  schemas.py
backend/app/agents/: base.py  dedektif_agent.py  mimar_agent.py  onboarding_agent.py  plan_agent.py  tarihci_agent.py
backend/app/api/: analyze.py  chat.py  health.py  ws.py
backend/app/llm/: cerebras.py  errors.py  gemini.py  groq.py  usage_tracker.py
backend/app/pipeline/: arch_edges.py  chunker.py  embedder.py  language_detect.py  miner.py
backend/app/rag/: chat_chain.py  retriever.py
backend/app/tasks/: analyze_task.py  celery_app.py
backend/app/utils/: github.py  llm_env.py  progress.py
backend/tests/: test_api.py  test_chunker.py
frontend/: .dockerignore  .env.local.example  Dockerfile  next.config.js  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/analysis/[id]/: page.tsx
frontend/app/api/chat-proxy/: route.ts
frontend/components/: HealthBadge.tsx  LanguageBadges.tsx  ProgressBar.tsx  ThemeToggle.tsx
frontend/components/icons/: GitHubMark.tsx
frontend/components/tabs/: ChatTab.tsx  MimapTab.tsx  SummaryTab.tsx  TimelineTab.tsx
frontend/lib/: api.ts  normalizeRepoUrl.ts  socket.ts
frontend/types/: cytoscape-dagre.d.ts
infra/: Dockerfile.backend  docker-compose.yml
(+1 files in other folders)
